header completed (no js yet)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <h1 class="header__heading">We are creatives</h1>
-      <div class="arrdown">&dArr;</div>
+      <div class="header__arrdown"></div>
     </header>
     <main class="body">This is the body content</main>
     <div class="testimonials">These are the testimonials</div>
