--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
@@ -39,7 +45,30 @@
       <h1 class="header__heading">We are creatives</h1>
       <div class="header__arrdown"></div>
     </header>
-    <main class="body">This is the body content</main>
+    <main class="body">
+      <div class="body__section body__section--1">
+        <div class="body__content">
+          <h2 class="heading-2">Transform your brand</h2>
+          <p class="body__para">
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Enagage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a href="#" class="body__learn-more">Learn more</a>
+        </div>
+      </div>
+      <div class="body__section body__section--2">
+        <img
+          src="images/desktop/image-transform.jpg"
+          alt="egg"
+          class="body__image--egg"
+        />
+      </div>
+      <div class="body__section body__section--3">Part 3</div>
+      <div class="body__section body__section--4">Part 4</div>
+      <div class="body__section body__section--5">Part 5</div>
+      <div class="body__section body__section--6">Part 6</div>
+    </main>
     <div class="testimonials">These are the testimonials</div>
     <div class="gallery">This is the gallery</div>
     <footer class="footer">This is the footer</footer>
